--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "dependencies": {
     "@popperjs/core": "2.11.6",
+    "axios": "^0.27.2",
     "bootstrap": "5.2.3",
     "chart.js": "4.2.1",
     "core-js": "3.28.0",
+    "date-fns": "^2.30.0",
     "dropzone": "6.0.0-beta.2",
     "pinia": "2.0.30",
     "quill": "1.3.7",
